[tool.poetry]
name = "homeassistantcontrol"
version = "0.1.0"
description = ""
authors = ["Taylor B. <tayjaybabee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cachetools = "^5.3.1"
appdirs = "^1.4.4"
requests = "^2.31.0"
websockets = "^12.0"
inspy-logger = "3.0.dev1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
